GNOME Bugzilla – Bug 756354
on Google gvfs backend document title is incorrect
Last modified: 2018-04-03 15:25:52 UTC
When opening file from the google gvfs backend, the title is wrong. It uses the id google generated (like 0B29Bf5EQoJiUNE1adTB6WkZpVW8) instead of the name of the document. On the bug 739008 and it is advised to use the gio property standard::display-name of the file. indeed if I use gvfs-info I can see the correct title in the attribute gvfs-info 0B29Bf5EQoJiUNE1adTB6WkZpVW8 ... standard::name: 0B29Bf5EQoJiUS3dQZndPUlBDelU standard::display-name: 2013-03-11 - Devis chg compteur eau jardins copro.pdf ... I don't know where to fix but If I can have some guidance I could provide a patch.
You might want to take a look at shell/ev-window-title.[ch] https://git.gnome.org/browse/evince/tree/shell/ev-window-title.c https://git.gnome.org/browse/evince/tree/shell/ev-window-title.h
Created attachment 370416 [details] [review] shell: Use display and edit name for filename Files on Google Drive have randomly generated URIs. Instead of using the URI, show the display-name in the UI for the password view and window title, and use the edit-name when saving and printing.
Comment on attachment 370416 [details] [review] shell: Use display and edit name for filename LGTM, thanks!
Attachment 370416 [details] pushed as fc93704 - shell: Use display and edit name for filename