shell: Use display and edit name for filename

Files on Google Drive have randomly generated URIs. Instead of using the
URI, show the display-name in the UI for the password view and window
title, and use the edit-name when saving and printing.

https://bugzilla.gnome.org/show_bug.cgi?id=756354